# book_summary

./: .gitignore  data_merge.py  data_view.py  main.py  pyproject.toml  trial.py
core/: data_keeper.py  extractor.py  util.py
